--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Jacleklm/hope-statistics-puppeteer/issues"
   },
-  "homepage": "https://github.com/Jacleklm/hope-statistics-puppeteer#readme"
+  "homepage": "https://github.com/Jacleklm/hope-statistics-puppeteer#readme",
+  "dependencies": {
+    "axios": "^0.21.0",
+    "puppeteer": "^5.4.1"
+  }
 }
